--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Olá bem vindo ao nosso armazamento</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
+    <h1>agora seus dados fazem parte dele, nós agradecemos!</h1>
     <p>👋</p>
   </body>
 </html>
